# Embedded-Linux

./: README.md
00_Lab1/: taskScript.sh
01_Lab2/: BinarySearch.c  Task2.txt
02_Exam/: script_exercise.sh
03_Task3/: CheckScript.sh  Untitled 1.odt
04_Task4/: user_group.sh
05_Create_LIb_task/Inc/: division.h  mod.h  multiplication.h
05_Create_LIb_task/src/: multiplication.c  r.c  sub.c
06_generate_compiler/: README.md
07_libmcal/: README.md
07_libmcal/inc/: BIT_MATH.h  DIO.h  PORT.h  PORT_CONFIG.h  Platform_Types.h  RegMap.h  math.h
08_CMAKE_exercise/: CMakeLists.txt
08_CMAKE_exercise/APP/: app.c
08_CMAKE_exercise/lib/: CMakeLists.txt
08_CMAKE_exercise/lib/include/: multi.h
08_CMAKE_exercise/lib/src/: div.c  multi.c
